--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClInclude Include="q.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="proj_1.c" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
